After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687620 - GstRTSPMessage: fix GI annotations
GstRTSPMessage: fix GI annotations
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-11-05 09:56 UTC by Ognyan Tonchev (redstar_)
Modified: 2012-11-05 13:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix GI annotations (4.76 KB, patch)
2012-11-05 09:56 UTC, Ognyan Tonchev (redstar_)
committed Details | Review

Description Ognyan Tonchev (redstar_) 2012-11-05 09:56:52 UTC
Created attachment 228084 [details] [review]
Fix GI annotations

A number of methods in GstRTSPMessage are not annotated correctly and it is not possible to use them from Python for example.
Comment 1 Tim-Philipp Müller 2012-11-05 13:27:17 UTC
commit 6318a4602a7474a5e7b258216fb751d4d21beca1
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Mon Nov 5 09:59:16 2012 +0100

    rtsp: fix GstRTSPMessage g-i annotations for out parameters
    
    https://bugzilla.gnome.org/show_bug.cgi?id=687620